force-app/main/default/objects/ErrorLog__e/ErrorLog__e.object-meta.xml
<CustomObject>
    <label>ErrorLog</label>
    <pluralLabel>ErrorLogs</pluralLabel>
</CustomObject>