force-app/main/default/objects/ErrorLog__e/fields/DebugLevel__c.field-meta.xml
<CustomField>
    <fullName>DebugLevel__c</fullName>
    <label>Debug Level</label>
    <length>10</length>
    <type>Text</type>
</CustomField>