force-app/main/default/objects/ErrorLog__e/fields/EndPoint__c.field-meta.xml
<CustomField>
    <fullName>EndPoint__c</fullName>
    <label>End Point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>