force-app/main/default/objects/ErrorLog__e/fields/ErroLog__c.field-meta.xml
<CustomField>
    <fullName>ErroLog__c</fullName>
    <label>ErroLog</label>
    <length>255</length>
    <type>Text</type>
</CustomField>