force-app/main/default/objects/ErrorLog__e/fields/Integration_Payload__c.field-meta.xml
<CustomField>
    <fullName>Integration_Payload__c</fullName>
    <label>Integration Payload/Request Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>