force-app/main/default/objects/ErrorLog__e/fields/InterfaceName__c.field-meta.xml
<CustomField>
    <fullName>InterfaceName__c</fullName>
    <label>Interface Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>