force-app/main/default/objects/ErrorLog__e/fields/Log_Code__c.field-meta.xml
<CustomField>
    <fullName>Log_Code__c</fullName>
    <label>Log Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>