force-app/main/default/objects/ErrorLog__e/fields/ResponseData__c.field-meta.xml
<CustomField>
    <fullName>ResponseData__c</fullName>
    <label>Response Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>