force-app/main/default/objects/ErrorLog__e/fields/SourceFunction__c.field-meta.xml
<CustomField>
    <fullName>SourceFunction__c</fullName>
    <label>Source Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>