force-app/main/default/objects/ErrorLog__e/fields/Timer__c.field-meta.xml
<CustomField>
    <fullName>Timer__c</fullName>
    <label>ExecutionTime (Milliseconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>